# daily-learning-md

./: README.md  generate_md.py  learning_prompt.txt  pyproject.toml
.github/workflows/: daily-learning.yml
